Resolving skills card placement - waiting to update text and resolve alignment

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -43,7 +43,7 @@ h1, h2 {
 }
 
 .header-background {
-    padding: 19% 0;
+    padding: 20% 0;
     display: table;
     height: 100%;
     width: 100%;
@@ -63,7 +63,7 @@ h1, h2 {
 
 #about-me {
     padding: 2% 0 5% 10%;
-    position: relative
+    /* position: relative; */
 }
 
 #about-me h2 {
@@ -151,11 +151,36 @@ h1, h2 {
 /* Skills Page */
 
 #skills {
-    display: grid;
+    /* display: grid;
     height: 100%;
     width: 100%;
     place-items: center;
-    background: linear-gradient(to bottom, #b7eaff 0%, #94dfff 100%);
+    background: linear-gradient(to bottom, #b7eaff 0%, #94dfff 100%); */
+    background: #7fbbda;
+    padding: 50px 0;
+    color: #ffffff;
+}
+
+.service-item {
+    margin-bottom: 15px;
+}
+
+.test {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    padding: 0 33%;
+}
+
+i.service-icon {
+    border: 3px solid #ffffff;
+    border-radius: 50%;
+    display: inline-block;
+    font-size: 56px;
+    width: 140px;
+    height: 140px;
+    line-height: 136px;
+    vertical-align: middle;
+    text-align: center;
 }
 
 .skills-text {
@@ -226,25 +251,26 @@ h1, h2 {
 }
 
 .wrapper {
-    height: 400px;
-    width: 320px;
+    height: 300px;
+    width: 400px;
     position: relative;
     transform-style: preserve-3d;
     perspective: 1000px;
 }
 
-.wrapper .card {
+.card {
     position: absolute;
     height: 100%;
     width: 100%;
     padding: 5px;
-    background: linear-gradient(to bottom, #b7eaff 0%, #94dfff 100%);
+    background: white;
     border-radius: 10px;
     transform: translateY(0deg);
     transform-style: preserve-3d;
     backface-visibility: hidden;
     box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.5);
     transition: transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
+    background: linear-gradient(to bottom, #b7eaff 0%, #94dfff 100%);
 }
 
 .wrapper:hover>.front-face {
@@ -252,11 +278,17 @@ h1, h2 {
 }
 
 .wrapper .card img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 10px;
+
+    /* border-radius: 10px; */
 }
+
+.front-face {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+}
+
 
 .wrapper .back-face {
     display: flex;
@@ -288,11 +320,34 @@ h1, h2 {
     color: white;
 }
 
-.back-face ul {
-    display: flex;
+.card-details {
+    height: 100%;
+    width: 100%;
+    -moz-perspective: 20rem;
+    perspective: 20rem;
+    margin: 2rem;
+
 }
 
-.back-face ul a {
+.card-details ul {
+    list-style: none;
+    margin: 0 auto;
+}
+
+.card-details li {
+    text-align: center;
+    padding: 1rem;
+    border-bottom: 1px solid;
+    border-color: lightgrey;
+}
+
+
+
+/* .back-face ul {
+    display: flex;
+} */
+
+/* .back-face ul a {
     display: block;
     height: 40px;
     width: 40px;
@@ -304,7 +359,7 @@ h1, h2 {
     border-radius: 50%;
     background: linear-gradient(375deg, #1cc7d0, #2ede98);
     transition: all 0.5s ease;
-}
+} */
 
 .back-face ul a:hover {
     color: #1cc7d0;
@@ -312,7 +367,29 @@ h1, h2 {
     background: linear-gradient(375deg, transparent, transparent);
 }
 
+.is-narrow {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 60px auto;
+    /* background-color: white; */
+    border-radius: 12px;
+    /* box-shadow: 0 5px 5px 0 rgb(233 240 243 / 50%), 0 0 0 1px #e6ecf8;
+    border-color: rgba(0, 0, 0, 0.15); */
+}
 
+
+.skills-header {
+    height: 100%;
+    text-align: center;
+    margin: 0;
+    font-size: 80px;
+    line-height: 1.47059;
+    font-weight: 400;
+    letter-spacing: -.022rem;
+    font-style: normal;
+    color: white;
+}
 
 
 /* Playlist Section */
